fix: actions alignments

--- a/app/assets/stylesheets/decidim/lausanne/budgets/budget/_votation-progress.scss
+++ b/app/assets/stylesheets/decidim/lausanne/budgets/budget/_votation-progress.scss
@@ -62,6 +62,7 @@ $block: "votation_banner";
     display: block;
     position: absolute;
     right: 3rem;
+    top: 12px;
     .#{$block}__actions-container {
       flex: 0;
       display: block;
